--- a/Technie/Info.plist
+++ b/Technie/Info.plist
@@ -60,5 +60,11 @@
 	</array>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Allow you to send your location to the technician.</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Roboto-Black.ttf</string>
+		<string>Roboto-BlackItalic.ttf</string>
+		<string>PlayfairDisplay-Italic-VariableFont_wght.ttf</string>
+	</array>
 </dict>
 </plist>
